--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "hls.js": "^1.6.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-player-cc": "^1.1.0"
+    "react-player-cc": "^1.1.0",
+    "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
