--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "dashjs": "^5.0.3",
     "hls.js": "^1.6.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
