--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "dashjs": "^5.0.3",
+    "highlight.js": "^11.11.1",
     "hls.js": "^1.6.9",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "react-player-cc": "^1.1.0",
     "tailwindcss": "^4.1.11"
   },
